--- a/package.json
+++ b/package.json
@@ -24,22 +24,24 @@
 		"@typescript-eslint/parser": "^5.3.0",
 		"@vitejs/plugin-vue": "^1.9.3",
 		"@vitejs/plugin-vue-jsx": "^1.2.0",
+		"autoprefixer": "^10.4.0",
 		"eslint": "^8.2.0",
 		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-tailwindcss": "^1.17.1",
 		"eslint-plugin-vue": "^8.0.3",
 		"husky": "^7.0.0",
 		"lint-staged": "^11.2.6",
 		"naive-ui": "^2.20.2",
+		"postcss": "^8.3.11",
 		"prettier": "^2.4.1",
+		"tailwindcss": "^2.2.19",
 		"typescript": "~4.3.5",
 		"vite": "^2.6.3",
-		"vite-plugin-windicss": "^1.5.1",
 		"vue-eslint-parser": "^8.0.1",
-		"vue-tsc": "^0.3.0",
-		"windicss": "^3.2.1"
+		"vue-tsc": "^0.3.0"
 	},
 	"lint-staged": {
-		"*.{js,jsx,ts,tsx,css,vue}": [
+		"*.{js,jsx,ts,tsx,vue}": [
 			"pnpm format",
 			"pnpm lint"
 		]
